adding before and Next

--- a/FRONT/src/app/board/column/card/menu/menu.component.html
+++ b/FRONT/src/app/board/column/card/menu/menu.component.html
@@ -13,10 +13,18 @@
   >
     delete
   </button>
-  <button type="button" class="btn btn-secondary material-icons">
+  <button
+    type="button"
+    class="btn btn-secondary material-icons"
+    (click)="goBefore()"
+  >
     navigate_before
   </button>
-  <button type="button" class="btn btn-secondary material-icons">
+  <button
+    type="button"
+    class="btn btn-secondary material-icons"
+    (click)="goNext()"
+  >
     navigate_next
   </button>
 </div>
