--- a/FRONT/src/app/login/login.component.html
+++ b/FRONT/src/app/login/login.component.html
@@ -18,7 +18,7 @@
 
             <div class="wrap-input100 validate-input">
               <input
-                class="input100"
+                class="form-control"
                 placeholder="Usuario"
                 name="login"
                 type="text"
@@ -28,7 +28,7 @@
 
             <div class="wrap-input100 validate-input">
               <input
-                class="input100"
+                class="form-control"
                 placeholder="Senha"
                 name="senha"
                 type="password"
@@ -36,7 +36,7 @@
               />
             </div>
 
-            <div class="container-login100-form-btn">
+            <div class="loginForm">
               <div class="wrap-login100-form-btn">
                 <div class="login100-form-bgbtn"></div>
                 <button
