fixing the button of closing edit mode

--- a/FRONT/src/app/board/column/card/card.component.html
+++ b/FRONT/src/app/board/column/card/card.component.html
@@ -16,6 +16,14 @@
   </a>
 </div>
 <div class="card" *ngIf="editBool">
+  <button
+    type="button"
+    class="btn btn-danger material-icons"
+    (click)="closeCard()"
+    Style="size: 25px;"
+  >
+    minimize
+  </button>
   <form [formGroup]="editForm" (ngSubmit)="updateCard()">
     <div class="card_content">
       <label for="titulo">Titulo</label> <br />
