--- a/FRONT/src/app/board/column/column.component.html
+++ b/FRONT/src/app/board/column/column.component.html
@@ -1,4 +1,4 @@
-<div class="board-columns" cdkDropListGroup>
+<div class="board-columns">
   <div class="board-column">
     <div class="column-title">
       {{ column }}
