--- a/FRONT/src/app/board/column/card/card.component.css
+++ b/FRONT/src/app/board/column/card/card.component.css
@@ -30,7 +30,7 @@
   opacity: 1 !important;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px black, 0 3px 14px 2px rgba(0, 0, 0, 0.05);
-  cursor: move;
+
   border-bottom: solid 1px #fff;
 }
 
@@ -38,6 +38,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.btn {
+  margin: 05px 0 05px 0;
 }
 
 .cdk-drag-preview {
